# AOC23

./: .gitignore  day0.py  day00.py  day02.py  day04.py  day05.py  day07.py  day09.py  day1.py  day10.py  day11.py  day12.py  day13.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  pyproject.toml  template.py
2023/: day00.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  template.py
2024/: day00.py  day01.py  day02.py  day03.py  day04.py  template.py
