[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Dylan Borchert <dylanbor01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
